--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World 
+<!DOCTYPE HTML>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Документ без названия</title>
+<link href="css/style.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+
+</body>
+</html>
