--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
-	  Hello World
+	  ВАлек пидорас
 	</body>
 	</html>
