--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	</head>
 	<body>
-	  ВАлек пидорас
+	  Привет мир
 	</body>
 	</html>
