--- a/dz1/index.html
+++ b/dz1/index.html
@@ -42,7 +42,7 @@
  
 
 <h2><p id = "Glava1"><em><u>Глава 1 Минас Тирит</u></em></p></h2>
-<img src="/Image/MInas.jpg" alt="">
+<img src="MInas.jpg" alt="">
 <p>Пиппин выглянул из-под плаща Гэндальфа. Он никак не мог понять, во сне или наяву свистит в ушах черный</p>
 <p>ночной ветер, медленно плывет зубчатая тень гор далеко справа, во сне или наяву качается у него над </p>
 <p>головой звездное небо. Он пытался вспомнить, что с ним и где он, но мысли путались, отдельные картины сменяли друг друга.</p>
@@ -77,7 +77,7 @@
 <br><br>
 
 <h3><p id = "Glava2"><u>Глава 2 Выбор Арагорна</u></p></h3>
-<img src="/Image/Aragorn.jpg" alt="">
+<img src="Aragorn.jpg" alt="">
 <p>Когда стих топот копыт Сполоха, уносящего Гэндальфа и Пиппина, Мерри вернулся к Арагорну.</p>
 <p>  Сумку свою он потерял еще в Порт Галене, собирать было нечего - так, кое-какие полезные мелочи с развалин Изенгарда.</p>
 <p>   Леголас и Гимли ожидали только сигнала тронуться в путь.</p>
@@ -97,7 +97,7 @@
 <br><br>
 
 <h4><p id = "Glava3"><u>Глава 3 Рохан собирает войска</u></p></h4>
-<img src="/Image/army.jpg" alt="">
+<img src="army.jpg" alt="">
 <p>Отныне все дороги вели на восток, навстречу Тьме. В тот самый час, когда Пиппин, стоя пред воротами Города,</p> 
 <p>смотрел на входящие войска, король Рохана во главе большого отряда Всадников спускался с гор.</p>
 <p>Вечерело. Длинные тени, перегоняя лошадей, бежали впереди по долине. На лесистых склонах было уже темно. </p>
@@ -115,7 +115,7 @@
 <br><br>
 
 <h5><p id = "Glava4"><u>Глава 4 Осада Города</u></p></h5>
-<img src="/Image/city.jpg" alt="">
+<img src="city.jpg" alt="">
 <p>Гэндальф разбудил Пиппина. За окнами по-прежнему было темно, в комнате горели свечи. Духота стояла, как перед грозой.</p> 
 <p>– Который час? - спросил Пиппин, зевая.</p> 
 <p>– Начало третьего, - ответил маг. - Одевайся, тебя призывает Правитель. Надеюсь, ты не забыл, что служишь ему?</p> 
@@ -137,7 +137,7 @@
 <p>Будешь выполнять мои поручения, беседовать со мной, когда будет время. Петь умеешь?</p> 
 <br><br>
 <h5><p id = "Glava5"><u>Глава 5 Поход Теодена</u></p></h5>
-<img src="/Image/pohod.jpg" alt="">
+<img src="pohod.jpg" alt="">
 <p>Мерри лежал, завернувшись в одеяло, и тщетно вглядывался в темноту. Ночь была тихой, безветренной, только деревья чуть</p>
 <p>слышно вздыхали вокруг. Он поднял голову и снова услышал настороживший его звук. Где-то вдали глухо били барабаны.</p>
 <p>Замолкая в одном месте, удары тут же возникали, в другом. Интересно, слышат ли их часовые?</p>
