--- a/dz1/index.html
+++ b/dz1/index.html
@@ -42,7 +42,7 @@
  
 
 <h2><p id = "Glava1"><em><u>Глава 1 Минас Тирит</u></em></p></h2>
-<img src="MInas.jpg" alt="">
+<img src="Minas.jpg" alt="">
 <p>Пиппин выглянул из-под плаща Гэндальфа. Он никак не мог понять, во сне или наяву свистит в ушах черный</p>
 <p>ночной ветер, медленно плывет зубчатая тень гор далеко справа, во сне или наяву качается у него над </p>
 <p>головой звездное небо. Он пытался вспомнить, что с ним и где он, но мысли путались, отдельные картины сменяли друг друга.</p>
