--- a/dz1/index.html
+++ b/dz1/index.html
@@ -3,7 +3,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <title>Ваша страница</title>
+    <title>Иванов Вячеслав</title>
   </head>
   <body>
 <p id = "Nachalo">Трилогия «Властелин Колец» бесспорно возглавляет список «культовых» книг XX века.</p>
