--- a/dz1/index.html
+++ b/dz1/index.html
@@ -159,6 +159,11 @@
           <a href="#Nachalo"> Вернуться в начало</a>
       </li>
   </ui>
-  
+  <script>
+var __REPLAIN_ = '864c0fca-8b4a-4a68-9545-8091deadc196';
+(function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
+var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+})('https://widget.replain.cc/dist/client.js';);
+</script>
   </body>
 </html>
