--- a/d2/index.html
+++ b/d2/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<title>Лэйдинг Иванов</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body style="background-image:url(img/bg.jpg)">
+	<header>
+		<div class="logo">
+			<p id="fig"><img src="img/logotip-web.png" class="center" width="240" height="70" alt="Винни-Пух> </p>
+		<div class="nav">
+			<ul>
+				<h1>Меню</h1>
+				<li><a href="https://vk.com/">меню №1</a></li>
+				<li><a href="https://vk.com/">меню №2</a></li>
+				<li><a href="https://vk.com/">меню №3</a></li>
+				<li><a href="https://vk.com/">меню №4</a></li>
+				<li><a href="https://vk.com/">меню №5</a></li>
+			</ul>
+		</div>
+	</header>
+	<hr>
+	<section class="content">
+		<div class="item_slider">
+		</div>
+		<div class="all">
+		<input checked type="radio" name="respond" id="desktop">
+			<article id="slider">
+					<input checked type="radio" name="slider" id="switch1">
+					<input type="radio" name="slider" id="switch2">
+					<input type="radio" name="slider" id="switch3">
+					<input type="radio" name="slider" id="switch4">
+					<input type="radio" name="slider" id="switch5">
+				<div id="slides">
+					<div id="overflow">
+						<div class="image">
+							<article><img src="img/1.jpg"></article>
+							<article><img src="img/2.jpg"></article>
+							<article><img src="img/3.jpg"></article>
+							<article><img src="img/4.jpg"></article>
+							<article><img src="img/5.jpg"></article>
+						</div>
+					</div>
+				</div>
+				<div id="controls">
+					<label for="switch1"></label>
+					<label for="switch2"></label>
+					<label for="switch3"></label>
+					<label for="switch4"></label>
+					<label for="switch5"></label>
+				</div>
+				<div id="active">
+					<label for="switch1"></label>
+					<label for="switch2"></label>
+					<label for="switch3"></label>
+					<label for="switch4"></label>
+					<label for="switch5"></label>
+				</div>
+			</article>
+		</div>
+	</section>
 
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+<p><center>
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, necessitatibus molestias, harum, nisi doloremque voluptas, nemo eveniet perspiciatis quo labore debitis. Aut commodi quasi veniam, minima, qui, voluptates labore aliquam laudantium iusto consectetur ab in eaque deserunt nam odit deleniti libero alias excepturi quisquam obcaecati facere placeat nihil magnam. Laborum.</center></p>
+
+</body>
+</html>
