--- a/d2/index.html
+++ b/d2/index.html
@@ -35,11 +35,11 @@
 				<div id="slides">
 					<div id="overflow">
 						<div class="image">
-							<article><img src="img/1.jpg"></article>
-							<article><img src="img/2.jpg"></article>
-							<article><img src="img/3.jpg"></article>
-							<article><img src="img/4.jpg"></article>
-							<article><img src="img/5.jpg"></article>
+							<article><img src="1.jpg"></article>
+							<article><img src="2.jpg"></article>
+							<article><img src="3.jpg"></article>
+							<article><img src="4.jpg"></article>
+							<article><img src="5.jpg"></article>
 						</div>
 					</div>
 				</div>
