--- a/d2/index.html
+++ b/d2/index.html
@@ -5,10 +5,10 @@
 	<title>Лэйдинг Иванов</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body style="background-image:url(img/bg.jpg)">
+<body style="background-image:url(bg.jpg)">
 	<header>
 		<div class="logo">
-			<p id="fig"><img src="img/logotip-web.png" class="center" width="240" height="70" alt="Винни-Пух> </p>
+			<p id="fig"><img src="logotip-web.png" class="center" width="240" height="70" alt="Винни-Пух> </p>
 		<div class="nav">
 			<ul>
 				<h1>Меню</h1>
