--- a/d2/index.html
+++ b/d2/index.html
@@ -69,5 +69,13 @@
 <p><center>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, necessitatibus molestias, harum, nisi doloremque voluptas, nemo eveniet perspiciatis quo labore debitis. Aut commodi quasi veniam, minima, qui, voluptates labore aliquam laudantium iusto consectetur ab in eaque deserunt nam odit deleniti libero alias excepturi quisquam obcaecati facere placeat nihil magnam. Laborum.</center></p>
 
+				
+<script>
+var __REPLAIN_ = '31e572b7-22b9-40a3-8fe7-47d6d97f6375';
+(function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
+var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+})('https://widget.replain.cc/dist/client.js');
+</script>
+				
 </body>
 </html>
