--- a/d2/index.html
+++ b/d2/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Лэйдинг Иванов</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://vk.com/js/api/openapi.js?154" type="text/javascript"></script>
 </head>
 <body style="background-image:url(bg.jpg)">
 	<header>
@@ -77,19 +78,16 @@ var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
 })('https://widget.replain.cc/dist/client.js');
 </script>
 	
-				
-<!-- Put this script tag to the <head> of your page -->
-<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
-
 <script type="text/javascript">
-  VK.init({apiId: API_ID, onlyWidgets: true});
-</script>
-
-<!-- Put this div tag to the place, where the Comments block will be -->
+  VK.init({
+    apiId: ВАШ_API_ID,
+    onlyWidgets: true
+  });
+				
 <div id="vk_comments"></div>
 <script type="text/javascript">
-VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
+ VK.Widgets.Comments('vk_comments');
 </script>
-
+</script>		
 </body>
 </html>
