--- a/d2/index.html
+++ b/d2/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Лэйдинг Иванов</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
 	
 </head>
 <body style="background-image:url(bg.jpg)">
@@ -76,6 +77,12 @@ var __REPLAIN_ = '31e572b7-22b9-40a3-8fe7-47d6d97f6375';
 (function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
 var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
 })('https://widget.replain.cc/dist/client.js');
+</script>
+				
+				<!-- Put this div tag to the place, where the Comments block will be -->
+<div id="vk_comments"></div>
+<script type="text/javascript">
+VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
 </script>
 			
 </body>
