--- a/d2/index.html
+++ b/d2/index.html
@@ -4,7 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Лэйдинг Иванов</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
+	<!-- Put this script tag to the <head> of your page -->
+<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
+
+<script type="text/javascript">
+  VK.init({apiId: 6601763, onlyWidgets: true});
+</script>
 	
 </head>
 <body style="background-image:url(bg.jpg)">
@@ -79,7 +84,7 @@ var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
 })('https://widget.replain.cc/dist/client.js');
 </script>
 				
-				<!-- Put this div tag to the place, where the Comments block will be -->
+<!-- Put this div tag to the place, where the Comments block will be -->
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
