--- a/d2/index.html
+++ b/d2/index.html
@@ -5,32 +5,30 @@
 	<title>Лэйдинг Иванов</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- Put this script tag to the <head> of your page -->
-<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
-
-<script type="text/javascript">
-  VK.init({apiId: 6601763, onlyWidgets: true});
-</script>
-	
+	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
 </head>
-<body style="background-image:url(bg.jpg)">
+<body style="background-image:url(img/bg.jpg)">
+
 	<header>
 		<div class="logo">
-			<p id="fig"><img src="logotip-web.png" class="center" width="240" height="70" alt="Винни-Пух> </p>
+			<p id="fig"><img src="img/logotip-web.png" class="center" width="240" height="70" alt="Винни-Пух> </p>
 		<div class="nav">
-			<ul>
+			<ul class="text-center">
 				<h1>Меню</h1>
-				<li><a href="https://vk.com/">меню №1</a></li>
-				<li><a href="https://vk.com/">меню №2</a></li>
-				<li><a href="https://vk.com/">меню №3</a></li>
-				<li><a href="https://vk.com/">меню №4</a></li>
-				<li><a href="https://vk.com/">меню №5</a></li>
+				<a href="https://vk.com/">В контакте</a>
+				<a href="#sta">Статья</a>
+				<a href="#otz">Отзывы</a>
+				<a href="https://vk.com/">меню №4</a>
+				<a href="https://vk.com/">меню №5</a>
 			</ul>
 		</div>
 	</header>
+
 	<hr>
 	<section class="content">
 		<div class="item_slider">
 		</div>
+
 		<div class="all">
 		<input checked type="radio" name="respond" id="desktop">
 			<article id="slider">
@@ -42,11 +40,11 @@
 				<div id="slides">
 					<div id="overflow">
 						<div class="image">
-							<article><img src="1.jpg"></article>
-							<article><img src="2.jpg"></article>
-							<article><img src="3.jpg"></article>
-							<article><img src="4.jpg"></article>
-							<article><img src="5.jpg"></article>
+							<article><img src="img/1.jpg"></article>
+							<article><img src="img/2.jpg"></article>
+							<article><img src="img/3.jpg"></article>
+							<article><img src="img/4.jpg"></article>
+							<article><img src="img/5.jpg"></article>
 						</div>
 					</div>
 				</div>
@@ -67,28 +65,52 @@
 			</article>
 		</div>
 	</section>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<hr>
+	<h1 align="center" id="sta" " >Статья</h1>
 
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-<p><center>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, necessitatibus molestias, harum, nisi doloremque voluptas, nemo eveniet perspiciatis quo labore debitis. Aut commodi quasi veniam, minima, qui, voluptates labore aliquam laudantium iusto consectetur ab in eaque deserunt nam odit deleniti libero alias excepturi quisquam obcaecati facere placeat nihil magnam. Laborum.</center></p>
+<div class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, necessitatibus molestias, harum, nisi  doloremque voluptas, nemo eveniet perspiciatis quo labore <br> Aut commodi quasi veniam, minima, qui, voluptates labore aliquam laudantium iusto consectetur ab in eaque <br> deserunt nam odit deleniti libero alias excepturi quisquam obcaecati facere placeat nihil magnam. Laborum.</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-				
+<h1 align="center" id="otz" " >Отзывы</h1>
+
+
+
+
+
+
+
+
+
 <script>
 var __REPLAIN_ = '31e572b7-22b9-40a3-8fe7-47d6d97f6375';
 (function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
 var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
 })('https://widget.replain.cc/dist/client.js');
 </script>
+
 				
 <!-- Put this div tag to the place, where the Comments block will be -->
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
 </script>
-			
+
+<br>
+<br>
+<br>
+<br>
+<br>
+
 </body>
 </html>
