--- a/d2/index.html
+++ b/d2/index.html
@@ -7,7 +7,7 @@
 	<!-- Put this script tag to the <head> of your page -->
 	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
 </head>
-<body style="background-image:url(img/bg.jpg)">
+<body style="background-image:url(bg.jpg)">
 
 	<header>
 		<div class="logo">
@@ -40,11 +40,11 @@
 				<div id="slides">
 					<div id="overflow">
 						<div class="image">
-							<article><img src="img/1.jpg"></article>
-							<article><img src="img/2.jpg"></article>
-							<article><img src="img/3.jpg"></article>
-							<article><img src="img/4.jpg"></article>
-							<article><img src="img/5.jpg"></article>
+							<article><img src="1.jpg"></article>
+							<article><img src="2.jpg"></article>
+							<article><img src="3.jpg"></article>
+							<article><img src="4.jpg"></article>
+							<article><img src="5.jpg"></article>
 						</div>
 					</div>
 				</div>
