--- a/d2/index.html
+++ b/d2/index.html
@@ -11,7 +11,7 @@
 
 	<header>
 		<div class="logo">
-			<p id="fig"><img src="img/logotip-web.png" class="center" width="240" height="70" alt="Винни-Пух> </p>
+			<p id="fig"><img src="logotip-web.png" class="center" width="240" height="70" alt="логотип> </p>
 		<div class="nav">
 			<ul class="text-center">
 				<h1>Меню</h1>
