--- a/d2/index.html
+++ b/d2/index.html
@@ -5,7 +5,12 @@
 	<title>Лэйдинг Иванов</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<!-- Put this script tag to the <head> of your page -->
-	<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
+<script type="text/javascript" src="https://vk.com/js/api/openapi.js?154"></script>
+
+<script type="text/javascript">
+  VK.init({apiId: 6601763, onlyWidgets: true});
+</script>
+
 </head>
 <body style="background-image:url(bg.jpg)">
 
