--- a/d2/index.html
+++ b/d2/index.html
@@ -12,19 +12,16 @@
 </script>
 
 </head>
-<body style="background-image:url(bg.jpg)">
-
 	<header>
-		<div class="logo">
-			<p id="fig"><img src="logotip-web.png" class="center" width="240" height="70" alt="логотип> </p>
+		<div class="logo" id="nachalo">
+			<p id="fig"><img src="101.jpg" class="center" width="1000" height="150" alt="Винни-Пух> </p>
 		<div class="nav">
-			<ul class="text-center">
+			<ul class="text-center2">
 				<h1>Меню</h1>
 				<a href="https://vk.com/">В контакте</a>
 				<a href="#sta">Статья</a>
 				<a href="#otz">Отзывы</a>
-				<a href="https://vk.com/">меню №4</a>
-				<a href="https://vk.com/">меню №5</a>
+				
 			</ul>
 		</div>
 	</header>
@@ -34,6 +31,7 @@
 		<div class="item_slider">
 		</div>
 
+		<h1 class="text-center2" id="otz" " >Слайдер</h1>
 		<div class="all">
 		<input checked type="radio" name="respond" id="desktop">
 			<article id="slider">
@@ -70,15 +68,17 @@
 			</article>
 		</div>
 	</section>
+
 	<br>
 	<br>
 	<br>
 	<br>
 	<br>
 	<hr>
-	<h1 align="center" id="sta" " >Статья</h1>
+	<h1 align="center" id="sta" " >Статья (Lorem)</h1>
 
-<div class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, necessitatibus molestias, harum, nisi  doloremque voluptas, nemo eveniet perspiciatis quo labore <br> Aut commodi quasi veniam, minima, qui, voluptates labore aliquam laudantium iusto consectetur ab in eaque <br> deserunt nam odit deleniti libero alias excepturi quisquam obcaecati facere placeat nihil magnam. Laborum.</div>
+<div class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Perspiciatis maiores ipsum deserunt ipsa omnis. <br> Tempora at reiciendis aliquam sed fugiat explicabo sunt quae distinctio iure veritatis,  magni non ipsum labore natus officiis! <br> Nulla unde omnis, error, reiciendis dolores nam hic repudiandae facilis, odio voluptatem distinctio quisquam quo ullam sequi. <br> Earum facilis, quis officia excepturi ullam. <br> Dignissimos aliquid, nemo fuga molestiae suscipit, ad illo iusto impedit, itaque nobis tenetur nam vero eos eius, qui. <br> Maiores, voluptates. <br> Ex quas quod autem recusandae eligendi quia voluptatum, odio molestias maiores distinctio ab, iste beatae sit tempore molestiae aperiam iure asperiores inventore alias nisi. <br> Itaque error numquam mollitia consequatur explicabo doloribus quidem ipsa, molestiae non. <br> Ad placeat necessitatibus ipsam quod inventore aut doloribus quis, ipsa suscipit iusto facere, iste repudiandae quibusdam error aliquam rem consequuntur dolorem, saepe quasi, incidunt tempora nesciunt dolor enim maiores. <br> Nisi illo ab quis totam dolorem dignissimos porro itaque suscipit error.</div>
+
 <br>
 <br>
 <br>
@@ -86,16 +86,6 @@
 <br>
 <br>
 <br>
-
-<h1 align="center" id="otz" " >Отзывы</h1>
-
-
-
-
-
-
-
-
 
 <script>
 var __REPLAIN_ = '31e572b7-22b9-40a3-8fe7-47d6d97f6375';
@@ -104,6 +94,8 @@ var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
 })('https://widget.replain.cc/dist/client.js');
 </script>
 
+
+<h1 class="text-center2" id="otz" " >Отзывы</h1>
 				
 <!-- Put this div tag to the place, where the Comments block will be -->
 <div id="vk_comments"></div>
@@ -116,6 +108,13 @@ VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
 <br>
 <br>
 <br>
+
+<footer>
+    <p>Copyright Иванов Вячеслав</p>
+    <p>Tel: +375(44)511-91-06</p>
+    <p><a href="https://vk.com/idgoeld">В контакте</a></p>
+    <p><a href="#nachalo">Начало</a></p>
+ </footer>
 
 </body>
 </html>
