--- a/d2/index.html
+++ b/d2/index.html
@@ -21,6 +21,7 @@
 				<a href="https://vk.com/">В контакте</a>
 				<a href="#sta">Статья</a>
 				<a href="#otz">Отзывы</a>
+				<a href="#map">Карта</a>
 				
 			</ul>
 		</div>
@@ -109,7 +110,7 @@ VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
 <br>
 <br>
 
-<h1 class="text-center2" >Карта</h1>
+<h1 class="text-center2" id="map">Карта</h1>
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script><div style='overflow:hidden;height:440px;width:700px;'><div id='gmap_canvas' style='height:440px;width:700px;'></div><div><small><a href="embedgooglemaps.com/ru">https://embedgooglemaps.com/ru/</a></small></div><div><small><a href="http://mrpromokod.ru/">https://mrpromokod.ru</a></small></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style></div><script type='text/javascript'>function init_map(){var myOptions = {zoom:12,center:new google.maps.LatLng(52.4411761,30.98784610000007),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(52.4411761,30.98784610000007)});infowindow = new google.maps.InfoWindow({content:'<strong>map</strong><br>Gomel<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
 
 <footer>
