--- a/d2/index.html
+++ b/d2/index.html
@@ -121,7 +121,11 @@ VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
 	<script type='text/javascript'>function init_map()
 		{var myOptions = 
 		    {zoom:12,center:new google.maps.LatLng(52.4411761,30.98784610000007),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker(
-			    {map: map,position: new google.maps.LatLng(52.4411761,30.98784610000007)});infowindow = new google.maps.InfoWindow({content:'<strong>map</strong><br>Gomel<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+			    {map: map,position: new google.maps.LatLng(52.4411761,30.98784610000007)});infowindow = new google.maps.InfoWindow(
+			    {content:'<strong>map</strong><br>Gomel<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);
+																    });infowindow.open(map,marker);
+		}google.maps.event.addDomListener(window, 'load', init_map);
+	</script>
 
 <footer>
     <p>Copyright Иванов Вячеслав</p>
