--- a/d2/index.html
+++ b/d2/index.html
@@ -20,7 +20,7 @@
 				<h1>Меню</h1>
 				<a href="https://vk.com/">В контакте</a>
 				<a href="#sta">Статья</a>
-				<a href="#otz">Отзывы</a>
+				<a href="#vk_comments">Отзывы</a>
 				<a href="#map">Карта</a>
 				
 			</ul>
