--- a/d2/index.html
+++ b/d2/index.html
@@ -113,6 +113,7 @@ VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
 <hr>
 
 <h1 class="text-center2" id="map">Карта</h1>
+	<div class = "text-center2">
 <script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
 	<div style='overflow:hidden;height:440px;width:700px;'><div id='gmap_canvas' style='height:440px;width:700px;'>
 		</div><div><small><a href="embedgooglemaps.com/ru">https://embedgooglemaps.com/ru/</a></small></div>
@@ -126,6 +127,7 @@ VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
 																    });infowindow.open(map,marker);
 		}google.maps.event.addDomListener(window, 'load', init_map);
 	</script>
+		</div>
 <hr>
 <footer>
     <p>Copyright Иванов Вячеслав</p>
