--- a/d2/index.html
+++ b/d2/index.html
@@ -127,9 +127,10 @@ VK.Widgets.Comments("vk_comments", {limit: 5, attach: "*"});
 																    });infowindow.open(map,marker);
 		}google.maps.event.addDomListener(window, 'load', init_map);
 	</script>
-		</div>
+		
 <hr>
-<footer>
+		
+<footer class = "text-center2">
     <p>Copyright Иванов Вячеслав</p>
     <p>Tel: +375(44)511-91-06</p>
     <p><a href="https://vk.com/idgoeld">В контакте</a></p>
