--- a/d3/index.html
+++ b/d3/index.html
@@ -1,1 +1,24 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Иванов Вячеслав</title>
+  <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+</head>
+<body>
+  <div class="wrapper">
+    <div class="card">
+      <div class="phone"><img src="img/phone.jpg" alt="Товар: Наушники"></div>
+      <div class="cardText">
+        <h2>Наушники Celebrat D3</h2>
+        <p>Производитель: Celebrat D3Вид наушников: ВкладышиТип подключения: Проводные Минимальная воспроизводимая частота: 20 Гц Максимальная воспроизводимая частота: 20000 Гц Диаметр мембраны: 10 мм Чувствительность наушников: 92 дБ ±3 дБ Сопротивление: 16 Ом ± 15%Разъём наушников: mini jack 3.5 mm Длина провода: 1.2 м</p>
+        <p class="price">Цена</p>
+        <p class="stic">29.99 $.</p>
+        <p class="button"><a href="#">Положить в корзину</a></p>
+      </div> 
+    </div> 
+  </div> 
+</body>
+</html>
