--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -21,7 +21,7 @@
           <div class="logo"><a href="#" class="logo__link">
               <img src="https://dummyimage.com/153x47&text=лого" title="" alt="" class="logo__img"/></a>
           </div>
-          <div class="tel tel_offset">+7 (383) 123-45-67</div>
+          <div class="tel tel_offset">+375 (44) 123-45-67</div>
           <a href="#form-call" class="btn fancybox-popup">Заказать звонок </a>
         </div>
       </div>
@@ -94,23 +94,23 @@
         <ul class="carousel-blog js-carusel-blog">
           <li class="carousel-blog__item"><a href="https://dummyimage.com/255x190/" title="Дневники стройки" rel="day" class="carousel-blog__inner fancybox"><img src="https://dummyimage.com/255x190/" alt="" title="" class="carousel-blog__img"/>
                   <div class="loupe"></div></a>
-            <div class="carousel-blog__date">Июль, 2017</div>
+            <div class="carousel-blog__date">Июль, 2018</div>
           </li>
           <li class="carousel-blog__item"><a href="https://dummyimage.com/255x190/" title="Дневники стройки" rel="day" class="carousel-blog__inner fancybox"><img src="https://dummyimage.com/255x190/" alt="" title="" class="carousel-blog__img"/>
                   <div class="loupe"></div></a>
-            <div class="carousel-blog__date">Июнь, 2017</div>
+            <div class="carousel-blog__date">Июнь, 2018</div>
           </li>
           <li class="carousel-blog__item"><a href="https://dummyimage.com/255x190/" title="Дневники стройки" rel="day" class="carousel-blog__inner fancybox"><img src="https://dummyimage.com/255x190/" alt="" title="" class="carousel-blog__img"/>
                   <div class="loupe"></div></a>
-            <div class="carousel-blog__date">Май, 2017</div>
+            <div class="carousel-blog__date">Май, 2018</div>
           </li>
           <li class="carousel-blog__item"><a href="https://dummyimage.com/255x190/" title="Дневники стройки" rel="day" class="carousel-blog__inner fancybox"><img src="https://dummyimage.com/255x190/" alt="" title="" class="carousel-blog__img"/>
                   <div class="loupe"></div></a>
-            <div class="carousel-blog__date">Апрель, 2017</div>
+            <div class="carousel-blog__date">Апрель, 2018</div>
           </li>
           <li class="carousel-blog__item"><a href="https://dummyimage.com/255x190/" title="Дневники стройки" rel="day" class="carousel-blog__inner fancybox"><img src="https://dummyimage.com/255x190/" alt="" title="" class="carousel-blog__img"/>
                   <div class="loupe"></div></a>
-            <div class="carousel-blog__date">Март, 2015</div>
+            <div class="carousel-blog__date">Март, 2018</div>
           </li>
         </ul>
       </div>
@@ -257,7 +257,7 @@
               <article>
 
                 <div class="right">
-                  <h2>Квартира каждой планировки по цене 30 тысяч рублей<br> за квадратный метр</h2>
+                  <h2>Квартира каждой планировки по цене 30$<br> за квадратный метр</h2>
                   <p>1. Условие</p>
                   <p>2. Условие</p>
                   <p>3. Условие</p>
@@ -294,7 +294,7 @@
         <div class="footer__inner">
           <img class="pin" src="./images/pin.png" alt="">
           <div class="footer-text">
-            <span>ООО «Компания»</span><br> Новоисибирск, ул. Немировича-Данченко, 123<br> +7 (383) 123-45-67<br> +7 (383)
+            <span>ООО «Компания»</span><br> Гомель, ул. Гомельская, 123<br> +375 (44) 123-45-67<br> +375 (44)
             111-22-33<br> info@companyname.ru
           </div>
         </div>
@@ -302,7 +302,7 @@
     </section>
     <div class="footer-devel">
       <div class="wrap ">
-        <div class="copy">© Copyright, 2017</div>
+        <div class="copy">© Copyright, Иванов Вячеслав 2018</div>
         <div class="police_link">
           <a href="#">Пользовательское соглашение</a>
           <a href="#">Согласие на обработку песональных  данных</a>
