--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content ie="edge">
-  <title>Главная</title>
+  <title>Экзамен Иванов</title>
   <meta name="description" content="">
   <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="css/normalize-4.1.1.css">
